<?xml version="1.0" encoding="utf-8"?>
<!--linear layout used as easy to align lots of views -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Image button used as an image and a button
     gets image from drawable
     id is set to navagation_data_logo this is to show its the logo for data page-->
    <ImageButton
        android:id="@+id/navagation_data_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="-5dp"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />
    <!--id set to search, allows width is set to match parent so will take up the width of page
    margin set so its seperated from button and recycler view-->
    <EditText
        android:id="@+id/Search_Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"/>

    <!--sets recycler view ID and the height is set to fill the page-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/data_recycle"
        android:layout_width="match_parent"
        android:layout_height="650dp" />


</LinearLayout>