...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <!--id is set to dataNav_button this shows its the button to get to country data from the navigation
    page, text is set to View Country Data postion is set-->
    <Button
        android:id="@+id/dataNav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Country Data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <!--id is set to button_favourites this shows its the button to get to favourites from the navigation
    page, text is set to Favourites postion is set-->
    <Button
        android:id="@+id/button_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Favourites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
